fix: Restore correct scroll logic (hide at top, show on scroll) now that button visibility bug is resolved

--- a/style.css
+++ b/style.css
@@ -626,9 +626,6 @@ img {
         right: 0;
         width: 100%;
 
-        /* DEBUG: Red border to confirm existence */
-        border: 5px solid red;
-
         z-index: 2147483647;
 
         box-sizing: border-box;
